Revision history for Dist-Zilla-Plugins-CJM

4.00   NOT
	Dist::Zilla::Plugin::TemplateCJM
	  - Add changelog_re parameter

	- Tests now use Test::DZil

3.05   May 5, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Log more information in debug mode
	  - Tests now output the log on failure

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - Added get_default method

	Dist::Zilla::Plugin::TemplateCJM
	  - Fix dependency_list to handle no dependencies

3.04   December 20, 2010
	Dist::Zilla::Role::ModuleInfo
	  - Use Module::Metadata instead of Module::Build::ModuleInfo
	  - Locally reset $/ $, $\ to default values (just in case)

	Dist::Zilla::Plugin::TemplateCJM
	  - Updated docs to talk about Module::Metadata

3.03   December 7, 2010
	Dist::Zilla::Plugin::Metadata
	  - New plugin

	Dist::Zilla::Plugin::TemplateCJM
	  - Only process comments that contain a {{ }} pair.
	    Text::Template breaks on strings that have the closing
	    delimiter without the opening one.

3.02   November 11, 2010
	- Fixed test prerequisites (needed Test::More 0.88)

	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Use Git::Wrapper instead of Git (RT#60140)
	  - Complain if a module's version exceeds the dist's version
	  - Indicate when the dist's version needs to be incremented
	  - Now has tests

3.01   August 9, 2010
	Dist::Zilla::Plugin::ArchiveRelease
	  - Use File::Copy::move to support cross-filesystem moves (RT#59288)

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - Now compatible with Dist::Zilla 3 & 4
	  - Now has tests

3.00   May 22, 2010
	- Now requires Dist::Zilla 3

	Dist::Zilla::Plugin::TemplateCJM
	  - Now compatible with Dist::Zilla 3

0.09   April 15, 2010
	Dist::Zilla::Plugin::ArchiveRelease
	  - accept ~ in directory to mean home directory (RT#56433)

0.08   April 14, 2010
	- This distribution is now Dist-Zilla-Plugins-CJM.
	  Dist-Zilla-PluginBundle-CJM now contains only @CJM (and
	  requires this distribution along with the other plugins used
	  by @CJM).