@@ -18,6 +18,7 @@ lib/Dist/Zilla/Plugin/ArchiveRelease.pm
 lib/Dist/Zilla/Plugin/GitVersionCheckCJM.pm
 lib/Dist/Zilla/Plugin/Metadata.pm
 lib/Dist/Zilla/Plugin/ModuleBuild/Custom.pm
+lib/Dist/Zilla/Plugin/RecommendedPrereqs.pm
 lib/Dist/Zilla/Plugin/TemplateCJM.pm
 lib/Dist/Zilla/Plugin/VersionFromModule.pm
 lib/Dist/Zilla/Role/ModuleInfo.pm
@@ -26,6 +27,7 @@ t/arcrel.t
 t/gitvercheck.t
 t/mb_custom.t
 t/metadata.t
+t/recommendedprereqs.t
 t/release-pod-coverage.t
 t/release-pod-syntax.t
 t/template.t
