@@ -4,6 +4,8 @@ use warnings;
 use Test::More 0.88;
 use DZT::Sample;
 
+# SUGGEST PREREQ: Test::Other
+
 is_deeply(
   DZT::Sample->return_arrayref_of_values_passed(1, [ 2 ], { 3 => 4 }),
   [ 1, [ 2 ], { 3 => 4 } ],
