@@ -16,28 +16,10 @@ manual_version = 1
 [MetaNoIndex]
 dir = corpus
 
+[AutoPrereqs]
+skip = ^(?:strict|warnings|utf8|Git::Wrapper)$
+skip = ^Dist::Zilla::Plugin::ModuleBuild$
+skip = ^Dist::Zilla::Role::(?:BeforeRelease|FileFinderUser|FileMunger|FilePruner|InstallTool|MetaProvider|PrereqSource|Releaser|TextTemplate|VersionProvider)$
+
 [Prereqs]
-CPAN::Meta::Converter     = 2.101550 ; improved downconversion
 Dist::Zilla               = 4 ; more than a year old now
-File::Copy                = 0
-File::HomeDir             = 0.81
-File::Temp                = 0.19 ; newdir
-List::Util                = 0
-Module::Metadata          = 0
-Moose                     = 0.65 ; attr fulfills requires
-Moose::Autobox            = 0.09 ; flattten
-Path::Class               = 0
-Scalar::Util              = 0
-autodie                   = 0
-version                   = 0.77 ; new API
-
-[Prereqs / RuntimeRecommends]
-Git::Wrapper              = 0
-
-[Prereqs / TestRequires]
-Test::DZil                = 4
-Test::More                = 0.88 ; done_testing
-File::pushd               = 0
-
-[Prereqs / TestRecommends]
-Test::Fatal               = 0
